// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chart Component should render a basic component: basic 1`] = `
<Context.Provider
  value={
    {
      "chartContainerRef": [Function],
      "chartSettings": {
        "chartDomain": {
          "domain": {
            "y": [
              0,
              10,
            ],
          },
        },
        "chartElementsProps": {
          "elements": [],
          "elementsById": {},
          "stackedElements": [],
          "stackedElementsById": {},
        },
        "chartLegend": null,
        "chartWidth": 0,
        "dataSets": [],
        "hasData": true,
        "isMultiYAxis": false,
        "maxX": 0,
        "maxY": 0,
        "padding": {
          "bottom": 75,
          "left": 59,
          "right": 59,
          "top": 50,
        },
        "themeColor": "blue",
        "tooltipDataSetLookUp": {},
        "xAxisProps": {
          "fixLabelOverlap": true,
          "label": null,
          "tickFormat": [Function],
          "tickValues": [],
        },
        "yAxisProps": [
          {
            "dependentAxis": true,
            "label": null,
            "orientation": "left",
            "showGrid": true,
            "style": {
              "axis": {},
              "tickLabels": {},
            },
            "tickFormat": [Function],
          },
        ],
      },
      "chartTooltipRef": [Function],
      "dataSetsToggle": [
        {},
        [Function],
      ],
    }
  }
>
  <div
    className="curiosity-chartarea uxui-curiosity__modal uxui-curiosity__modal--loading"
    data-test="curiosity-chartarea"
  />
</Context.Provider>
`;

exports[`Chart Component should setup basic chart settings: settings 1`] = `
[
  [
    {
      "children": <div
        className="curiosity-chartarea uxui-curiosity__modal uxui-curiosity__modal--loading"
        data-test="curiosity-chartarea"
      />,
      "value": undefined,
    },
  ],
  [
    {
      "children": <div
        className="curiosity-chartarea uxui-curiosity__modal uxui-curiosity__modal--loading"
        data-test="curiosity-chartarea"
      />,
      "value": {
        "chartContainerRef": [Function],
        "chartSettings": {
          "chartDomain": {
            "domain": {
              "y": [
                0,
                3,
              ],
            },
          },
          "chartElementsProps": {
            "elements": [
              {
                "chartType": undefined,
                "props": {
                  "data": [
                    {
                      "x": 1,
                      "xAxisLabel": "1 x axis label",
                      "y": 1,
                    },
                    {
                      "x": 2,
                      "xAxisLabel": "2 x axis label",
                      "y": 2,
                    },
                  ],
                  "key": "chart-ipsumGraph-",
                  "name": "chart-ipsumGraph-",
                  "style": {
                    "data": {
                      "fill": "#ipsum",
                      "stroke": "#lorem",
                      "strokeDasharray": "4,3",
                      "strokeWidth": 3,
                    },
                  },
                  "themeColor": undefined,
                  "themeVariant": undefined,
                  "x": undefined,
                  "y": [Function],
                },
              },
            ],
            "elementsById": {
              "ipsumGraph": {
                "chartType": undefined,
                "props": {
                  "data": [
                    {
                      "x": 1,
                      "xAxisLabel": "1 x axis label",
                      "y": 1,
                    },
                    {
                      "x": 2,
                      "xAxisLabel": "2 x axis label",
                      "y": 2,
                    },
                  ],
                  "key": "chart-ipsumGraph-",
                  "name": "chart-ipsumGraph-",
                  "style": {
                    "data": {
                      "fill": "#ipsum",
                      "stroke": "#lorem",
                      "strokeDasharray": "4,3",
                      "strokeWidth": 3,
                    },
                  },
                  "themeColor": undefined,
                  "themeVariant": undefined,
                  "x": undefined,
                  "y": [Function],
                },
              },
            },
            "stackedElements": [
              {
                "chartType": undefined,
                "props": {
                  "data": [
                    {
                      "x": 1,
                      "xAxisLabel": "1 x axis label",
                      "y": 1,
                    },
                    {
                      "x": 2,
                      "xAxisLabel": "2 x axis label",
                      "y": 2,
                    },
                  ],
                  "key": "chart-loremGraph-",
                  "name": "chart-loremGraph-",
                  "style": {
                    "data": {
                      "fill": "#ipsum",
                      "stroke": "#lorem",
                      "strokeWidth": 2,
                    },
                  },
                  "themeColor": undefined,
                  "themeVariant": undefined,
                  "x": undefined,
                  "y": [Function],
                },
              },
            ],
            "stackedElementsById": {
              "loremGraph": {
                "chartType": undefined,
                "props": {
                  "data": [
                    {
                      "x": 1,
                      "xAxisLabel": "1 x axis label",
                      "y": 1,
                    },
                    {
                      "x": 2,
                      "xAxisLabel": "2 x axis label",
                      "y": 2,
                    },
                  ],
                  "key": "chart-loremGraph-",
                  "name": "chart-loremGraph-",
                  "style": {
                    "data": {
                      "fill": "#ipsum",
                      "stroke": "#lorem",
                      "strokeWidth": 2,
                    },
                  },
                  "themeColor": undefined,
                  "themeVariant": undefined,
                  "x": undefined,
                  "y": [Function],
                },
              },
            },
          },
          "chartLegend": null,
          "chartWidth": 0,
          "dataSets": [
            {
              "data": [
                {
                  "x": 1,
                  "xAxisLabel": "1 x axis label",
                  "y": 1,
                },
                {
                  "x": 2,
                  "xAxisLabel": "2 x axis label",
                  "y": 2,
                },
              ],
              "fill": "#ipsum",
              "id": "loremGraph",
              "isStacked": true,
              "stroke": "#lorem",
              "strokeWidth": 2,
            },
            {
              "data": [
                {
                  "x": 1,
                  "xAxisLabel": "1 x axis label",
                  "y": 1,
                },
                {
                  "x": 2,
                  "xAxisLabel": "2 x axis label",
                  "y": 2,
                },
              ],
              "fill": "#ipsum",
              "id": "ipsumGraph",
              "isThreshold": true,
              "stroke": "#lorem",
              "strokeDasharray": "4,3",
              "strokeWidth": 3,
            },
          ],
          "hasData": true,
          "isMultiYAxis": false,
          "maxX": 2,
          "maxY": 2,
          "padding": {
            "bottom": 75,
            "left": 55,
            "right": 55,
            "top": 50,
          },
          "themeColor": "blue",
          "tooltipDataSetLookUp": {},
          "xAxisProps": {
            "fixLabelOverlap": true,
            "label": null,
            "tickFormat": [Function],
            "tickValues": [
              1,
              2,
            ],
          },
          "yAxisProps": [
            {
              "dependentAxis": true,
              "label": null,
              "orientation": "left",
              "showGrid": true,
              "style": {
                "axis": {},
                "tickLabels": {},
              },
              "tickFormat": [Function],
            },
          ],
        },
        "chartTooltipRef": [Function],
        "dataSetsToggle": [
          {},
          [Function],
        ],
      },
    },
  ],
]
`;
